grammer.txt
expr        : keyword identifier equal expr
		    : term (PLUS|MINUS) term

term        : factor (MUL|DIV) factor

factor	    : (PLUS|MINUS) factor
		    : advancedOP

advancedOP	: atom (POW|AND|OR) factor

atom 	    : INT|FLOAT|IDENTIFIER
		    : LPAREN expr RPAREN
